Adding notice about 2 Cup, 4 Person Scramble date change.

--- a/assets/scss/default/_custom.scss
+++ b/assets/scss/default/_custom.scss
@@ -379,6 +379,15 @@ section.homepage-notices {
             min-height: 100%;
             min-width: 105%;
           }
+          &.vertical-stag {
+            img {
+              min-height: 100%;
+              min-width: 105%;
+              position: absolute;
+              top: 50%;
+              transform: translateY(-38%);
+            }
+          }
         }
         .inner-content-area {
           padding: 3.5rem;
