--- a/assets/scss/elements/_mega-menu.scss
+++ b/assets/scss/elements/_mega-menu.scss
@@ -154,7 +154,8 @@
     li {
       a {
         border-bottom: 1px solid #f7f7f7;
-        font-family: "Inter Medium";
+        font-family: "Inter";
+        font-weight: 500;
       }
 
       &:last-child {
