--- a/assets/scss/elements/_service.scss
+++ b/assets/scss/elements/_service.scss
@@ -547,7 +547,7 @@
     color: white;
     border: none;
     &:hover {
-      color: var(--color-primary);
+      color: white;
     }
   }
   svg {
@@ -562,7 +562,7 @@
   &:hover {
     svg {
       path {
-        stroke: var(--color-offset) !important;
+        stroke: white !important;
       }
     }
   }
@@ -653,9 +653,10 @@
   position: relative;
 
   .shape-top-right {
+    width: 97px;
     position: absolute;
     top: -23.34px;
-    left: 242px;
+    right: 242px;
     // filter: blur(3px);
   }
 }
