--- a/assets/scss/elements/_timeline.scss
+++ b/assets/scss/elements/_timeline.scss
@@ -48,7 +48,7 @@
 
 .container-consulting {
   padding-top: 5rem;
-  max-width: 1200px;
+  // max-width: 1200px;
   //   margin: auto;
 
   @media #{$sm-layout} {
