--- a/assets/scss/elements/_button.scss
+++ b/assets/scss/elements/_button.scss
@@ -7,7 +7,7 @@
   transition: 0.3s;
   z-index: 1;
   text-decoration: none;
- 
+
   &:focus {
     box-shadow: none;
   }
@@ -101,21 +101,19 @@
       position: absolute;
       top: 1%;
       left: 0%;
-      width: 200px;
-      height: 200px;
-      background-color: #fff;
+      width: 220px;
+      height: 220px;
+      background-color: #006457;
       border-color: transparent;
       border-radius: 50%;
-      transform: translate(-10px, -70px) scale(0.1);
+      transform: translate(50px, -70px) scale(0.1);
       opacity: 0;
       z-index: -1;
       transition: transform 0.5s, opacity 0.5s, background-color 0.5s;
     }
 
     &:hover {
-      color: var(--color-primary);
-      // border: 1px solid transparent;
-
+      color: #fff;
       ::before {
         opacity: 0;
       }
@@ -140,14 +138,14 @@
     }
     &.footer-submit {
       background: var(--color-accent);
-      border: 1px solid var(--color-accent)
+      border: 1px solid var(--color-accent);
     }
   }
   &.header-btn {
-    background: #cf9d39;
-    -webkit-text-stroke: .3px;
+    background: var(--color-secondary);
+    -webkit-text-stroke: 0.3px;
     &::after {
-      background-color: #c28919;
+      background-color: darken(#fbab0a, 3%);
     }
   }
 }
