--- a/assets/scss/elements/_cta.scss
+++ b/assets/scss/elements/_cta.scss
@@ -5,8 +5,7 @@ section.cta {
     padding-top: 12rem;
     padding-bottom: 12rem;
     .cta-one-wrapper {
-      // background: #e3f5e8;
-      background: #00be93;
+      background-color: #06be93;
       display: flex;
       align-items: center;
       justify-content: space-between;
@@ -48,10 +47,10 @@ section.cta {
 
         p {
           position: relative;
-          font-size: 20px;
+          font-size: 16px;
           margin-bottom: 2rem;
           padding-right: 3rem;
-          color: rgba(255, 255, 255, 0.746);
+          color: rgba(255, 255, 255, 0.862);
           @media #{$large-mobile} {
             font-size: 16px;
           }
@@ -143,7 +142,6 @@ section.cta {
           height: 100%;
           width: 100%;
           z-index: 7;
-
           background-image: linear-gradient(
             to right,
             hsl(166.03, 100%, 37.06%) 0%,
@@ -184,8 +182,8 @@ section.cta {
       }
     }
     @media (max-width: 992px) {
-      padding-top: 7rem;
-      padding-bottom: 7rem;
+      padding-top: 1.75rem;
+      padding-bottom: 1.75rem;
       .cta-one-wrapper {
         .left-area {
           .title {
