--- a/assets/scss/elements/_footer.scss
+++ b/assets/scss/elements/_footer.scss
@@ -60,7 +60,7 @@
 }
 
 .rts-footer-area {
-  padding-top: 14rem;
+  padding-top: 10rem;
   // background-color: #f4f7f5;
   .container {
     padding: 0 1rem 11rem 2rem;
@@ -93,7 +93,7 @@
     }
   }
   @media (max-width: 768px) {
-    padding-top: 10rem;
+    padding-top: 8rem;
     .container {
       padding: 0 2rem 11rem 2rem;
     }
@@ -105,10 +105,10 @@
     // color: rgba(46, 46, 46, 0.787)
   }
   .row {
-    border-top: 1px solid #ffffff22;
-    border-top: 1px solid var(--color-accent);
+    // border-top: 1px solid #ffffff22;
+    border-top: 1px solid var(--color-border);
   }
-  .copyright-wrapper { 
+  .copyright-wrapper {
     // border-top: 1px solid #00000014;
     display: flex;
     align-items: center;
@@ -139,8 +139,9 @@
       }
     }
     @media #{$large-mobile} {
+      padding-top: 1rem;
       flex-direction: column;
-      gap: 20px;
+      gap: 7px;
     }
 
     p {
@@ -300,6 +301,335 @@
         margin: 0;
         display: flex;
         align-items: center;
+      }
+    }
+  }
+}
+
+footer {
+  // slightly darker than --color-primary b/c it looks better
+  background: #004e45;
+  color: white;
+  .container {
+    .row {
+      .logo-column {
+        &.center-please {
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+        }
+        div:not(.that-group) {
+          display: flex;
+          flex-direction: column;
+          // justify-content: center;
+          .logo-brick {
+            display: flex;
+            flex-direction: row;
+            padding-bottom: 3rem;
+            align-items: center;
+            .logo-col {
+              //  flex-basis: 180px;
+              padding-bottom: 1rem;
+              .footer-logo {
+                width: 241px;
+                height: auto;
+              }
+            }
+          }
+          hr {
+            background-color: var(--color-border);
+            opacity: 1;
+            margin-bottom: 4rem;
+          }
+          .footer-form {
+            padding-bottom: 3rem;
+            p {
+              color: white;
+            }
+            .that-group {
+              display: flex;
+              flex-direction: row;
+              width: 100%;
+              gap: 10px;
+              input {
+                border-radius: 0;
+                height: 40px;
+                font-size: 16px;
+                padding: 12px;
+                border: 1px solid rgba(255, 255, 255, 0.26);
+                border: 1px solid var(--color-accent);
+                color: white;
+                &::placeholder {
+                  color: rgba(255, 255, 255, 0.435);
+                }
+                &:active,
+                &:focus,
+                &:hover {
+                  border: 1px solid white;
+                }
+              }
+              button {
+                height: 40px;
+              }
+            }
+          }
+          .link-group {
+            .contact-stack {
+              padding-top: 0.25rem;
+              padding-right: 3rem;
+              // padding-left: 3rem;
+              border-right: 1px solid var(--color-border);
+              // border-left: 1px solid var(--color-offset);
+              .link {
+                transition: all 0.25s ease;
+                line-height: 145%;
+                &.map-link {
+                  margin-top: 1.5rem;
+                }
+                .icon {
+                  width: 20px;
+                  height: auto;
+                  margin-right: 15px;
+                  position: relative;
+                  &.phone-icon {
+                    top: -1px;
+                  }
+                  &.map-icon {
+                    width: 19px;
+                    bottom: -2px;
+                  }
+                }
+
+                &:hover {
+                  color: rgba(255, 255, 255, 0.65);
+                }
+              }
+            }
+            .social-stack {
+              padding-left: 3rem;
+              .social-link {
+                text-decoration: none;
+                transition: all 0.3s ease;
+                line-height: 145%;
+                img {
+                  width: 20px;
+                  height: auto;
+                  margin-right: 15px;
+                  margin-top: -1.5px;
+                }
+                &:hover {
+                  color: rgba(255, 255, 255, 0.65);
+                }
+                &:not(:first-of-type) {
+                  margin-top: 1rem;
+                }
+              }
+            }
+            // .facebook-link {
+            //   position: relative;
+            //   top: -2px;
+            //   padding-left: 3.25rem;
+            //   .facebook-logo {
+            //     width: 85px;
+            //     height: auto;
+            //     overflow: visible;
+            //     path {
+            //       fill: var(--color-secondary);
+            //       transition: all 0.25s ease;
+            //     }
+            //   }
+            //   &:hover {
+            //     .facebook-logo {
+            //       path {
+            //         fill: #0766ff;
+            //       }
+            //     }
+            //   }
+            // }
+          }
+        }
+      }
+    }
+  }
+
+  //* weather widget styling
+  .weather-card {
+    padding: 6rem;
+    position: relative;
+    top: -5px;
+    width: fit-content;
+    background-color: #00554a;
+    .weather-heading {
+      color: white;
+      font-family: "IKOB";
+      font-size: 3rem;
+      text-align: center;
+      justify-content: center;
+      padding-bottom: 3rem;
+      .grey-text {
+        color: rgba(255, 255, 255, 0.65);
+        .hyphen {
+          display: inline-block;
+        }
+        .break {
+          display: none;
+        }
+        display: inline-block;
+        font-family: var(--font-primary);
+      }
+    }
+    .card-body {
+      padding: 0;
+      // padding-bottom: 2.8rem;
+    }
+    // future weather rows
+    .row {
+      padding: 10px 0;
+      padding-bottom: 5px;
+      @include monospaced(rgba(255, 255, 255, 0.65));
+      justify-content: center;
+      align-items: center;
+      [class*="col"] {
+        .tomorrow-icon,
+        .day-after-tomorrow-icon,
+        .three-days-from-today-icon {
+          width: 17px;
+        }
+      }
+
+      //~ Today's weather
+      &.today-row {
+        padding-bottom: 1.75rem;
+        font-family: var(--font-primary);
+        .today-icon {
+          display: flex;
+          flex-direction: row;
+          justify-content: center;
+          .icon-img {
+            margin-top: -1px;
+            margin-left: -9px;
+            width: 45px;
+          }
+        }
+        .today-temp {
+          font-size: 5.5rem;
+          padding: 0rem;
+          margin-left: -5px;
+          color: white;
+          .the-temp {
+            position: relative;
+            &:after {
+              content: "°F";
+              font-size: 14px;
+              font-weight: 500;
+              text-transform: uppercase;
+              color: rgba(255, 255, 255, 0.65);
+              position: absolute;
+              right: -16px;
+              top: 7px;
+            }
+          }
+        }
+        .today-weather {
+          display: flex;
+          flex-direction: row;
+          justify-content: center;
+          .today-weather-wrapper {
+            width: fit-content;
+            padding-top: 0rem;
+            padding-left: 0rem;
+            padding-right: 0rem;
+            line-height: 116%;
+            text-align: center;
+    font-family: 'Sackers';
+    line-height: 1;
+
+            .what-weather {
+              color: white;
+              display: block;
+              // text-wrap: nowrap;
+            }
+            .light-white {
+              display: block;
+              color: #ffffffa6;
+              .wind-icon {
+                width: 15px;
+                height: auto;
+                position: relative;
+                top: -0.5px;
+              }
+            }
+          }
+        }
+      }
+
+      //~ The 3 future weather summaries
+      &.future-row {
+        font-size: 15px;
+        [class*="col"] {
+          flex: 1;
+        }
+        .icon {
+          text-align: center;
+          font-size: 1.2rem;
+          opacity: 0.65;
+        }
+      }
+    }
+  }
+  @media screen and (max-width: 550px) {
+    .weather-card {
+      ._500 {
+        line-height: 130%;
+        margin-bottom: 1rem !important;
+        .hyphen {
+          display: none;
+        }
+      }
+      .card-body {
+        padding-left: 1rem;
+        padding-right: 1rem;
+        padding-bottom: 2.5rem;
+        padding-top: 1rem;
+
+        .today-icon {
+          padding-right: 0rem;
+        }
+      }
+    }
+  }
+  .rts-copyright-area-one {
+    color: white;
+    .new-row {
+      p {
+        color: white;
+      }
+    }
+  }
+  @media screen and (max-width: 1106px) {
+    .gradient-footer-wrapper {
+      .rts-footer-area {
+        .container {
+          .row {
+            .logo-column {
+              .logo-brick {
+                .logo-col {
+                  flex-basis: unset;
+                }
+              }
+            }
+            .weather-col {
+              .weather-card {
+                padding: 5rem;
+                .card-body {
+                  .weather-heading {
+                    padding: 1rem;
+                  }
+                }
+              }
+            }
+          }
+        }
       }
     }
   }
