--- a/assets/scss/elements/_nav.scss
+++ b/assets/scss/elements/_nav.scss
@@ -15,7 +15,8 @@
         display: block;
         color: var(--color-primary);
         font-size: 16px;
-        font-family: 'Inter Medium';
+        font-family: 'Inter';
+        font-weight: 500;
         letter-spacing: -.2px;
         
         &:hover {
