Added December promotion to Membership Fees page.

--- a/assets/scss/default/_custom.scss
+++ b/assets/scss/default/_custom.scss
@@ -1014,7 +1014,7 @@ table {
         font-weight: 550;
         text-transform: capitalize;
         text-align: center;
-        &:not(:nth-of-type(1)) {
+        &.im-special {
           padding-bottom: 0px;
         }
         //~ subtable title
